--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,21 @@
 buildscript {
+    ext.kotlin_version = "1.4.21"
     repositories {
-        jcenter()
         google()
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.0-beta03'
         classpath 'com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:0.7'
+        classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.4.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-
+apply plugin: "scabbard.gradle"
 allprojects {
     repositories {
         jcenter()
