--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.14.1'
@@ -46,9 +46,9 @@ dependencies {
     implementation 'com.google.auto.factory:auto-factory:1.0-beta3'
     annotationProcessor 'com.google.auto.factory:auto-factory:1.0-beta3'
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.jakewharton.timber:timber:4.3.1'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.2.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
@@ -64,13 +64,13 @@ dependencies {
     testImplementation "org.mockito:mockito-core:1.10.19"
     testImplementation 'junit:junit:4.12'
     
-    androidTestImplementation 'com.android.support:support-annotations:25.0.0'
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
     androidTestImplementation 'com.squareup:javawriter:2.5.1'
 
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test:rules:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation "org.mockito:mockito-core:1.10.19"
     androidTestImplementation "com.google.dexmaker:dexmaker:1.2"
     androidTestImplementation "com.google.dexmaker:dexmaker-mockito:1.2"
