Update to android x Run

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     androidTestImplementation "com.google.dexmaker:dexmaker:1.2"
     androidTestImplementation "com.google.dexmaker:dexmaker-mockito:1.2"
     testAnnotationProcessor "com.google.auto.factory:auto-factory:1.0-beta3"
+    testImplementation "com.google.auto.factory:auto-factory:1.0-beta3"
 }
