--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,11 @@ dependencies {
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    implementation 'com.google.guava:guava:23.4-android'
-    implementation 'com.google.code.findbugs:jsr305:2.0.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.google.guava:guava:24.1-jre'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     testImplementation "org.robolectric:robolectric:3.1.2"
     testImplementation "org.mockito:mockito-core:1.10.19"
