--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.frogermcs.androiddevmetrics'
-//apply plugin: 'kotlin-kapt'
-//apply plugin: "scabbard.gradle"
-//
-//scabbard {
-//    enabled true
-//    outputFormat "png"
-//}
+apply plugin: "scabbard.gradle"
+
+scabbard {
+    enabled true
+    outputFormat "png"
+}
 
 android {
     compileSdkVersion 30
@@ -34,10 +37,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.core:core:1.3.2'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    kapt 'com.google.dagger:dagger-compiler:2.30.1'
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.30.1'
     implementation 'com.google.dagger:dagger-producers:2.30.1'
@@ -47,7 +50,7 @@ dependencies {
 //    annotationProcessor 'com.google.auto.factory:auto-factory:1.0-beta5'
 
     implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    kapt 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.2.1'
