--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.30.1'
     implementation 'com.google.dagger:dagger-producers:2.30.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.30.1'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 //    implementation 'com.google.auto.factory:auto-factory:1.0-beta5'
 //    annotationProcessor 'com.google.auto.factory:auto-factory:1.0-beta5'
 
